--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,359 @@
-.App {
+ /* .App {
+  text-align: left;
+}
+
+
+nav{
+height: 50px;
+ padding: 1%;
+ margin-bottom: 1%;
+}
+
+.App li{
+  display: inline;
+  padding: 2%;
+}
+
+.App ul{
+  display: inline;
   text-align: center;
+  padding: 1%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.App a{
+  text-decoration: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.App .active:hover{
+  color: yellow;
+} */
+ * {
+   padding: 0;
+   margin: 0;
+   box-sizing: border-box;
+ }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+ .App .container {
+   display: grid;
+   grid-template-columns: auto auto auto;
+ }
+
+ /* .App .column{
+  margin-left: 15%;
+} */
+
+ .App img {
+   height: 200px;
+ }
+
+ .App .card {
+   width: fit-content;
+ }
+
+ .App h3 {
+   text-align: center;
+ }
+
+
+ .App p button {
+   border: none;
+   background-color: white;
+   color: rgb(98, 98, 167);
+ }
+
+
+
+ .overlay {
+   position: fixed;
+   top: 0;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   background: rgba(0, 0, 0, 0.7);
+   transition: opacity 500ms;
+   visibility: hidden;
+   opacity: 0;
+ }
+
+ .overlay:target {
+   visibility: visible;
+   opacity: 1;
+ }
+
+ .nav {
+   color: #fff;
+   background-color: #003243;
+   width: 100%;
+   height: 56px;
+   line-height: 56px;
+ }
+
+ .popup {
+   margin: 70px auto;
+   padding: 5px;
+   background: #fff;
+   border-radius: 5px;
+   width: 30%;
+   position: relative;
+   transition: all 5s ease-in-out;
+ }
+
+ .popup img {
+   width: 100%;
+ }
+
+ .popup h2 {
+   margin-top: 0;
+   color: #333;
+   font-family: Tahoma, Arial, sans-serif;
+ }
+
+ .popup .close {
+   position: absolute;
+   top: 20px;
+   right: 30px;
+   transition: all 200ms;
+   font-size: 30px;
+   font-weight: bold;
+   text-decoration: none;
+   color: #333;
+ }
+
+ .popup .close:hover {
+   color: #8fd806;
+ }
+
+ .popup .content {
+   max-height: 30%;
+   overflow: auto;
+ }
+
+ .container-detail {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   height: 100vh;
+ }
+
+ .product-card-detail {
+   background-color: #fff;
+   width: 300px;
+   padding: 20px;
+   border-radius: 5px;
+   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+ }
+
+ .badge {
+   background-color: #333;
+   color: #fff;
+   padding: 5px 10px;
+   border-radius: 3px;
+   font-size: 12px;
+   text-transform: uppercase;
+   margin-bottom: 10px;
+ }
+
+ .product-tumb img {
+   width: 100%;
+   height: auto;
+ }
+
+ .product-details {
+   padding: 10px 0;
+ }
+
+ .product-details h4 {
+   margin: 0;
+   font-size: 16px;
+   font-weight: 600;
+ }
+
+ .product-price {
+   font-size: 14px;
+   margin: 5px 0;
+ }
+
+ .product-bottom-details {
+   border-top: 1px solid #eee;
+   margin-top: 10px;
+   padding-top: 10px;
+ }
+
+ .product-bottom-details p {
+   margin: 0;
+ }
+
+
+ .container {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+ }
+
+ .column {
+   flex-basis: calc(33.33% - 20px);
+   margin-bottom: 20px;
+ }
+
+ .card {
+   border: 1px solid #ccc;
+   padding: 20px;
+   text-align: center;
+   max-width: 100%;
+   height: 800px;
+ }
+
+ .card img {
+   max-width: 100%;
+   height: auto;
+   object-fit: cover;
+ }
+
+
+ .card h3 {
+   margin-top: 10px;
+ }
+
+ .card p {
+   margin-bottom: 10px;
+ }
+
+ .card button {
+   background-color: #0e100e;
+   color: white;
+   border: none;
+   padding: 12px 24px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 16px;
+   border-radius: 4px;
+   transition: background-color 0.3s ease;
+ }
+
+ .card button:hover {
+   background-color: #bef608fe;
+ }
+
+ .logo {
+   font-size: 2rem;
+   font-weight: 800;
+ }
+
+ .item-action {
+   margin-top: var(--space-top);
+ }
+
+ .btn,
+ .btn-large,
+ .btn-small {
+   text-decoration: none;
+   color: #fff;
+   background-color: #000;
+   text-align: center;
+   letter-spacing: .5px;
+   transition: background-color .2s ease-out;
+   cursor: pointer;
+ }
+
+ .btn-hover::before {
+   z-index: 1;
+
+   position: absolute;
+
+   width: 50%;
+   height: 100%;
+   background-color: var(--main-color);
+   transition: 0.3s ease-in-out;
+ }
+
+ .btn-hover:hover::before {
+   width: 100%;
+ }
+
+ .container-footer {
+   background-color: rgb(237, 203, 191);
+   padding: 10%;
+ }
+
+ .nav a {
+   color: #e86969;
+ }
+
+ .brand-logo {
+   margin-left: 30px
+ }
+
+ modal-show {
+   background-color: rgba(0, 0, 0, 0.2);
+   width: 100vw;
+   height: 100vmax;
+   z-index: 99;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   position: absolute;
+ }
+
+ .btn {
+   color: #ffffff;
+   padding: 0.25rem 1.5rem;
+   text-transform: uppercase;
+   font-size: 1.25rem;
+   font-weight: 700;
+   display: inline-flex;
+   position: relative;
+   align-items: center;
+ }
+
+ .btn-hover::before {
+   z-index: 1;
+
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 50%;
+   height: 100%;
+   background-color: var(--main-color);
+   transition: 0.3s ease-in-out;
+ }
+
+ .btn-hover:hover::before {
+   width: 100%;
+ }
+
+ .btn i,
+ .btn span {
+   z-index: 1;
+ }
+
+ .btn i {
+   margin-right: 1rem;
+ }
+
+ .container {
+   display: flex;
+   flex-wrap: wrap;
+
+   justify-content: space-between;
+
+ }
+
+ nav .nav-wrapper {
+   position: relative;
+   height: 100%;
+   background: black;
+ }
+
+
+
+
+ .item-action {
+   margin-top: auto;
+
+ }
+
+ .click-action {
+   margin-top: auto;
+ }
